--- a/config/crd/bases/windtunnel.plantd.org_experiments.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_experiments.yaml
@@ -275,6 +275,7 @@ spec:
                             each Schema. If `compressedFileFormat` is set and `compressPerSchema`
                             is `true`, this is the total number of compressed files.
                           format: int32
+                          minimum: 1
                           type: integer
                         parallelism:
                           description: Number of parallel jobs when generating the
@@ -333,6 +334,7 @@ spec:
                             - name
                             - numRecords
                             type: object
+                          minItems: 1
                           type: array
                         storageSize:
                           anyOf:
@@ -456,12 +458,15 @@ spec:
                             during Experiment. Equivalent to the "ramping-arrival-rate"
                             executor's `maxVUs` option in K6. See https://k6.io/docs/using-k6/scenarios/executors/ramping-arrival-rate/#options
                             for more details.
+                          format: int64
+                          minimum: 0
                           type: integer
                         preAllocatedVUs:
                           description: Number of VUs to pre-allocate before Experiment
                             start. Equivalent to the "ramping-arrival-rate" executor's
                             `preAllocatedVUs` option in K6. See https://k6.io/docs/using-k6/scenarios/executors/ramping-arrival-rate/#options
                             for more details.
+                          format: int64
                           minimum: 0
                           type: integer
                         stages:
@@ -484,18 +489,22 @@ spec:
                                   stage. Equivalent to the "ramping-arrival-rate"
                                   executor's `stages[].target` option in K6. See https://k6.io/docs/using-k6/scenarios/executors/ramping-arrival-rate/#options
                                   for more details.
+                                format: int64
                                 minimum: 0
                                 type: integer
                             required:
                             - duration
                             - target
                             type: object
+                          minItems: 1
                           type: array
                         startRate:
                           description: Number of requests per `timeUnit` period at
                             Experiment start. Equivalent to the "ramping-arrival-rate"
                             executor's `startRate` option in K6. See https://k6.io/docs/using-k6/scenarios/executors/ramping-arrival-rate/#options
                             for more details.
+                          format: int64
+                          minimum: 0
                           type: integer
                         timeUnit:
                           description: Period of time to apply to the `startRate`
@@ -557,16 +566,18 @@ spec:
                         type: array
                       inCluster:
                         description: Whether the Pipeline is deployed within the cluster
-                          or not. When set to `true`, the Pipeline will be accessed
-                          by its Services. When set to `false`, Services of type ExternalName
-                          will be created to access the Pipeline.
+                          or not. When set to `false`, Services of type ExternalName
+                          will be created to access the Pipeline. When set to `true`,
+                          the Pipeline will be accessed by its Services.
                         type: boolean
                       metricsEndpoint:
                         description: Endpoint for metrics scraping.
                         properties:
                           http:
-                            description: Configurations of the HTTP protocol. Must
-                              be set if `inCluster` is set to `false` in the Pipeline.
+                            description: Configurations of the HTTP protocol. Only
+                              the scheme, host, and port of the `http.url` field will
+                              be used. Must be set if `inCluster` is set to `false`
+                              in the Pipeline.
                             properties:
                               headers:
                                 additionalProperties:
@@ -591,43 +602,14 @@ spec:
                               to "metrics".
                             type: string
                           serviceRef:
-                            description: Reference to the Service. Must be set if
-                              `inCluster` is set to `true` in the Pipeline.
+                            description: Reference to the Service. The Service must
+                              be in the same namespace as the Pipeline. Must be set
+                              if `inCluster` is set to `true` in the Pipeline.
                             properties:
-                              apiVersion:
-                                description: API version of the referent.
-                                type: string
-                              fieldPath:
-                                description: 'If referring to a piece of an object
-                                  instead of an entire object, this string should
-                                  contain a valid JSON/Go field access statement,
-                                  such as desiredState.manifest.containers[2]. For
-                                  example, if the object reference is to a container
-                                  within a pod, this would take on a value like: "spec.containers{name}"
-                                  (where "name" refers to the name of the container
-                                  that triggered the event) or if no container name
-                                  is specified "spec.containers[2]" (container with
-                                  index 2 in this pod). This syntax is chosen only
-                                  to have some well-defined way of referencing a part
-                                  of an object. TODO: this design is not final and
-                                  this field is subject to change in the future.'
-                                type: string
-                              kind:
-                                description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-                                type: string
                               name:
-                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                                type: string
-                              namespace:
-                                description: 'Namespace of the referent. More info:
-                                  https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
-                                type: string
-                              resourceVersion:
-                                description: 'Specific resourceVersion to which this
-                                  reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
-                                type: string
-                              uid:
-                                description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                  TODO: Add other useful fields. apiVersion, kind,
+                                  uid?'
                                 type: string
                             type: object
                             x-kubernetes-map-type: atomic
