--- a/config/crd/bases/windtunnel.plantd.org_pipelines.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_pipelines.yaml
@@ -49,9 +49,15 @@ spec:
                 - azure
                 - gcp
                 type: string
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               enableCostCalculation:
                 description: Whether to enable cost calculation for the Pipeline.
                 type: boolean
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               healthCheckURLs:
                 description: List of URLs for health check. An HTTP GET request will
                   be made to each URL, and all of them should return 200 OK to pass
@@ -61,12 +67,18 @@ spec:
                   type: string
                 minItems: 1
                 type: array
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               inCluster:
                 description: Whether the Pipeline is deployed within the cluster or
                   not. When set to `false`, Services of type ExternalName will be
                   created to access the Pipeline. When set to `true`, the Pipeline
                   will be accessed by its Services.
                 type: boolean
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               metricsEndpoint:
                 description: Endpoint for metrics scraping.
                 properties:
@@ -108,6 +120,9 @@ spec:
                     type: object
                     x-kubernetes-map-type: atomic
                 type: object
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               pipelineEndpoints:
                 description: List of endpoints for data ingestion.
                 items:
@@ -141,18 +156,21 @@ spec:
                   type: object
                 minItems: 1
                 type: array
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
               tags:
                 additionalProperties:
                   type: string
                 description: Map of tags to select cloud resources of the Pipeline.
                   Equivalent to the tags in the cloud service provider.
                 type: object
+                x-kubernetes-validations:
+                - message: value is immutable
+                  rule: self == oldSelf
             required:
             - pipelineEndpoints
             type: object
-            x-kubernetes-validations:
-            - message: Pipeline is immutable
-              rule: self == oldSelf
           status:
             description: PipelineStatus defines the observed state of Pipeline.
             properties:
@@ -161,6 +179,9 @@ spec:
                 type: string
             type: object
         type: object
+        x-kubernetes-validations:
+        - message: must contain at most 55 characters
+          rule: size(self.metadata.name) <= 55
     served: true
     storage: true
     subresources:
