--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -9,6 +9,14 @@ resources:
 - role_binding.yaml
 - leader_election_role.yaml
 - leader_election_role_binding.yaml
+# Prometheus RBAC
+- prometheus_service_account.yaml
+- prometheus_role.yaml
+- prometheus_role_binding.yaml
+# OpenCost RBAC
+- opencost_service_account.yaml
+- opencost_role.yaml
+- opencost_role_binding.yaml
 # Comment the following 4 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
 # which protects your /metrics endpoint.
